# voltage-place-demo

./: .gitignore  .replit  Dockerfile  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  replit.nix  setup-backend.sh  setup-db.sh  setup-frontend.sh  start.sh
frontend/: .env  .env.production  .eslintrc.cjs  index.html  package.json  vite.config.ts
frontend/src/: brush.css  brush.ts  drawing.ts  els.ts  env.d.ts  main.css  main.ts  nav.ts  pay.css  pay.ts  utils.ts
python-backend/: .env  Procfile  app.py  backend.py  fly.toml  package.json  requirements.txt  schema.prisma  seed.py  setup-backend.sh  start.sh
