[tool.poetry]
name = "repl_nix_voltage-place-demo"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
requests = "^2.28.1"
webcolors = "^1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
